--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   
   name: github 
   repo: aed/luizerl.github.io 
-  branch: master 
+  branch: main 
   site_domain: monitoria-aed.netlify.app
   publish_mode: editorial_workflow
 
