--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,3 +1,18 @@
 backend:
-  name: git-gateway 
-  branch: main
+  name: github
+  repo: luizerl/luizerl.github.io
+  branch: master
+  site_domain: monitoria-aed.netlify.com
+
+media_folder: "images/uploads"
+
+collections:
+  - name: "listas" # Used in routes, e.g., /admin/collections/blog
+    label: "Listas" # Used in the UI
+    folder: "/listas" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "Body", name: "body", widget: "markdown"}
